5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1679_1105.log
== TEST (2019-04-28 20:18:02) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
	print(des)
	print('Casa: Stark')
	
elif (des == 'leao'):
	print(des)
	print('Casa: Lannister')


-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:26:50) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
	print('Entrada:', des)
	print('Casa: Stark')
	
elif (des == 'leao'):
	print('Entrada:', des)
	print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
	print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
	print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
	print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
	print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
	print('Casa: Greyjoy')
	
elif (des == 'esfolado')
   print('Entrada:', des)
	print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
	print('Casa: Tully')


-- ERROR:
File "XXXX", line 15
    print('Casa: Barathon')
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:27:02) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
	print('Entrada:', des)
	print('Casa: Stark')
	
elif (des == 'leao'):
	print('Entrada:', des)
	print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
	print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
	print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
	print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
	print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
	print('Casa: Greyjoy')
	
elif (des == 'esfolado')
   print('Entrada:', des)
	print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
	print('Casa: Tully')


-- ERROR:
File "XXXX", line 15
    print('Casa: Barathon')
                          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:28:33) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
print('Entrada:', des)
print('Casa: Stark')
	
elif (des == 'leao'):
print('Entrada:', des)
print('Casa: Lannister')
	
elif (des == 'veado'):
print('Entrada:', des)
print('Casa: Barathon')
	
elif (des == 'dragao'):
print('Entrada:', des)
print('Casa: Targaryen')
	
elif (des == 'rosa'):
print('Entrada:', des)
print('Casa: Tyrell')
	
elif (des == 'sol'):
print('Entrada:', des)
print('Casa: Martell')
	
elif (des == 'lula'):
print('Entrada:', des)
print('Casa: Greyjoy')
	
elif (des == 'esfolado')
print('Entrada:', des)
print('Casa: Bolton')
	
elif (des == 'turta'):
print('Entrada:', des)
print('Casa: Tully')


-- ERROR:
File "XXXX", line 6
    print('Entrada:', des)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:30:17) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
print('Entrada:', des)
print('Casa: Stark')
	
elif (des == 'leao'):
print('Entrada:', des)
print('Casa: Lannister')
	
elif (des == 'veado'):
print('Entrada:', des)
print('Casa: Barathon')
	
elif (des == 'dragao'):
print('Entrada:', des)
print('Casa: Targaryen')
	
elif (des == 'rosa'):
print('Entrada:', des)
print('Casa: Tyrell')
	
elif (des == 'sol'):
print('Entrada:', des)
print('Casa: Martell')
	
elif (des == 'lula'):
print('Entrada:', des)
print('Casa: Greyjoy')
	
elif (des == 'esfolado')
print('Entrada:', des)
print('Casa: Bolton')
	
elif (des == 'turta'):
print('Entrada:', des)
print('Casa: Tully')

else:
	print('Entrada:', des)
	print('Brasao invalido')


-- ERROR:
File "XXXX", line 6
    print('Entrada:', des)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:30:34) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
print('Entrada:', des)
print('Casa: Stark')
	
elif (des == 'leao'):
print('Entrada:', des)
print('Casa: Lannister')
	
elif (des == 'veado'):
print('Entrada:', des)
print('Casa: Barathon')
	
elif (des == 'dragao'):
print('Entrada:', des)
print('Casa: Targaryen')
	
elif (des == 'rosa'):
print('Entrada:', des)
print('Casa: Tyrell')
	
elif (des == 'sol'):
print('Entrada:', des)
print('Casa: Martell')
	
elif (des == 'lula'):
print('Entrada:', des)
print('Casa: Greyjoy')
	
elif (des == 'esfolado')
print('Entrada:', des)
print('Casa: Bolton')
	
elif (des == 'turta'):
print('Entrada:', des)
print('Casa: Tully')

else:
print('Entrada:', des)
print('Brasao invalido')


-- ERROR:
File "XXXX", line 6
    print('Entrada:', des)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:31:54) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
print('Entrada:', des)
print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
print('Entrada:', des)
print('Brasao invalido')


-- ERROR:
File "XXXX", line 26
    print('Entrada:', des)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:58:48) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
print('Entrada:', des)
print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
print('Entrada:', des)
print('Brasao invalido')


-- ERROR:
File "XXXX", line 26
    print('Entrada:', des)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:59:37) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
print('Entrada:', des)
print('Brasao invalido')


-- ERROR:
File "XXXX", line 42
    print('Entrada:', des)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 15:59:48) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 15:59:52) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- EXECUTION TIME:
0.148629
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:26:59) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:27:13) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- EXECUTION TIME:
0.147428
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 16:28:02) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 16:28:12) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- EXECUTION TIME:
0.149123
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:04:58) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:06:03) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:06:08) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- EXECUTION TIME:
0.150748
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:09:43) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'.upper()):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:10:11) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'.upper()):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:10:25) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'.upper()):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:10:37) 
-- CODE:
#inputs
des= input("Entrada: ")
#condicoes

if (des == 'lobo'):
   print('Entrada:', des)
   print('Casa: Stark')
	
elif (des == 'leao'):
   print('Entrada:', des)
   print('Casa: Lannister')
	
elif (des == 'veado'):
   print('Entrada:', des)
   print('Casa: Barathon')
	
elif (des == 'dragao'.upper()):
   print('Entrada:', des)
   print('Casa: Targaryen')
	
elif (des == 'rosa'):
   print('Entrada:', des)
   print('Casa: Tyrell')
	
elif (des == 'sol'):
   print('Entrada:', des)
   print('Casa: Martell')
	
elif (des == 'lula'):
   print('Entrada:', des)
   print('Casa: Greyjoy')
	
elif (des == 'esfolado'):
   print('Entrada:', des)
   print('Casa: Bolton')
	
elif (des == 'turta'):
   print('Entrada:', des)
   print('Casa: Tully')

else:
   print('Entrada:', des)
   print('Brasao invalido')


-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
